--- a/front/website/src/components/layout/Footer.astro
+++ b/front/website/src/components/layout/Footer.astro
@@ -53,7 +53,7 @@
             <i class="fab fa-twitter text-white text-lg"></i>
           </a>
           <a
-            href="https://www.tiktok.com/@trattorialabel"
+            href="https://www.tiktok.com/@trattorialabellaco"
             target="_blank"
             rel="noopener noreferrer"
             class="w-12 h-12 bg-amber-600 rounded-full flex items-center justify-center hover:bg-amber-700 transform hover:scale-110 transition-all duration-300"
@@ -131,8 +131,7 @@
             <div>
               <p class="text-gray-300 font-medium">Dirección</p>
               <p class="text-gray-400 text-sm">
-                Plazoleta Centro Internacional<br />
-                Cra 10 #27-27 Int 157<br />
+                Carrera 10 #27-27<br />
                 Bogotá, Colombia
               </p>
             </div>
@@ -146,7 +145,7 @@
             </div>
             <div>
               <p class="text-gray-300 font-medium">Teléfono</p>
-              <p class="text-gray-400 text-sm">+57 302 660 0431</p>
+              <p class="text-gray-400 text-sm">311 2064619</p>
             </div>
           </div>
 
