--- a/front/website/src/components/layout/Hero.astro
+++ b/front/website/src/components/layout/Hero.astro
@@ -341,7 +341,7 @@ const images = [
               </div>
               <div>
                 <p class="font-semibold text-gray-800">Teléfono</p>
-                <p class="text-gray-600">+57 (1) 123-4567</p>
+                <p class="text-gray-600">311 2064619</p>
               </div>
             </div>
 
