--- a/front/website/src/components/reservas/FormularioCliente.astro
+++ b/front/website/src/components/reservas/FormularioCliente.astro
@@ -244,7 +244,7 @@ const { mostrar } = Astro.props;
         console.log("✅ Enviando al backend:", datosReserva);
 
         try {
-          const apiUrl = "http://3.220.183.29:3050/api/v1/reserves";
+          const apiUrl = "http://localhost:3050/api/v1/reserves";
 
           const response = await fetch(apiUrl, {
             method: "POST",
